[package]
name = "CT3D3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
ocl = "0.19.4"
glam = "0.22.0"
noise = "0.8.2"
byteorder="1"
subprocess="0.2.9"
defaultdict="0.13.0"